--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "client": "npm start --prefix client",
+    "client": "cross-env NODE_OPTIONS=--openssl-legacy-provider npm start --prefix client",
     "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "dependencies": {
@@ -16,6 +16,9 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "concurrently": "^6.0.0"
+    "chai": "^5.1.2",
+    "concurrently": "^6.0.0",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.8.2"
   }
 }
