--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "mongoose": "^8.8.1",
+    "react-scripts": "^5.0.1",
     "socket.io": "^4.0.0",
     "uuid": "^11.0.3"
   },
